@@ -93,6 +93,7 @@ xx/xx/2005 - 1.12.2-WIP
 	  in the /$Extend/$Quota:$Q index root attributes.  (Szaka)
 	- ntfsmount: Add FreeBSD support.  (Yura)
 	- ntfsmount: Fix bug with moving non-empty directories.  (Yura)
+	- ntfsinfo: dump $Secure:$SDS in verbose mode.  (Szaka)
 
 10/10/2005 - 1.12.1 - Minor fix to location of mount.ntfs-fuse and mkfs.ntfs.
 
